2002-03-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* **/*.[ch]:
	implemented titleatleft and titleatright styles; titles are not drawn
	vertically yet

	* fvwm/style.c (check_window_style_change):
	* fvwm/update.c (apply_window_updates):
	* fvwm/ewmh_names.c (EWMH_WMIconName):
	(EWMH_WMName):
	(charset_to_utf8):
	* fvwm/ewmh.c (ksmserver_workarround):
	* fvwm/update.c (apply_window_updates):
	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/fvwm.c (main):
	* fvwm/session.c (SaveWindowStates):
	(matchWin):
	(MatchWinToSM):
	* fvwm/functions.c (expand):
	* fvwm/stack.c (dump_stack_ring):
	(verify_stack_ring_consistency):
	* fvwm/module_interface.c (BroadcastWindowIconNames):
	(CMD_Send_WindowList):
	* fvwm/add_window.c (free_window_names):
	(free_window_names):
	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/builtins.c (CMD_Wait):
	* fvwm/style.c (CMD_DestroyStyle):
	(lookup_style):
	Adapted to changes of Flocale.h

	* acconfig.h:
	removed COMPUND_TEXT ifdef

	* configure.in:
	mutibyte defaults to on

	* acconfig.h:
	* libs/Flocale.c:
	* libs/Flocale.h:
	* fvwm/fvwm.h (FvwmWindow):
	cleaned up Flocale stuff for better information hiding

	* libs/Flocale.c (get_FlocaleFontSet):
	(get_FlocaleFont):
	added a new font strucht member min_char_offset for vertical text

	* libs/Flocale.c (get_FlocaleFontSet):
	fixed a bug in descent calculation

	* fvwm/fvwm.h (FvwmWindow):
	removed title_g

	* fvwm/borders.c (RedrawButtons):
	(SetupTitleBar):
	(RedrawBorder):
	(SetupFrame):
	(RedrawTitle):
	(DrawMultiPixmapTitlebar):
	don't use title_g or boundary_width

	* libs/Flocale.c (FlocaleTextWidth):
	* libs/Flocale.c (FlocaleDrawString):
	added interface for vertical strings
	* libs/Flocale.h (FlocaleWinString):
	added flags structure w/ is_vertical_string flag

	* fvwm/borders.c (RedrawTitle):
	(DrawMultiPixmapTitlebar):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/icons.c (DrawIconWindow):
	* fvwm/move_resize.c (DisplayPosition):
	(DisplaySize):
	* fvwm/screen.h (ScreenInfo):